--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -13,27 +13,28 @@
         background-color: #f0f0f0;
         padding: 20px;
       }
-      .button {
+      .code {
         display: inline-block;
         background-color: #0099ff;
         color: white;
         padding: 10px 20px;
-        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="content">
-        <h1>Verify Email</h1>
+        <h1>Password Reset</h1>
         <p>Hi <%= name %>,</p>
         <p>
-          Thank you for signing up for our service. To complete your registration, please
-          verify your email address by clicking on the link below.
+          We received a request to reset your password for your account. If you did not
+          request this, please ignore this email.
         </p>
-        <p><a href="<%= verifyUrl %>" class="button">Verify Email</a></p>
-        <p>This link will expire in 24 hours.</p>
-        <p>If you did not sign up for our service, please ignore this email.</p>
+        <p>To reset your password, enter the code below in the app or website.</p>
+        <p><span class="code"><%= resetToken %></span></p>
+        <p>This code will expire in 24 hours.</p>
         <p>Thank you,</p>
         <p>Shoperz Team</p>
       </div>
